Point smashlibs submodule to our fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "server_frontend_flutter/smashlibs"]
 	path = server_frontend_flutter/smashlibs
-	url = https://github.com/moovida/smashlibs.git
+	url = https://github.com/Cris70/Geopaparazzi_smashlibs.git
 	branch = master
