--- a/server_frontend_flutter/pubspec.yaml
+++ b/server_frontend_flutter/pubspec.yaml
@@ -24,14 +24,14 @@ dependencies:
 
   dart_hydrologis_utils: ^0.8.1
 
-  dart_jts: ^0.2.3
+  dart_jts: ^0.3.0+1
 
   ###########################
   # OTHERS
   ############################
 
   # BSD
-  http: ^0.13.5
+  http: ^1.0.0
 
   # MIT
   horizontal_data_table: ^4.1.2+2
@@ -49,19 +49,19 @@ dependencies:
   provider: ^6.0.3
 
   # apache
-  latlong2: ^0.8.1
+  latlong2: ^0.9.1
 
   # MIT
   flutter_tags_x: ^1.1.0
 
   # BSD
-  flutter_map: ^4.0.0
+  flutter_map: ^8.2.1
     # git:
     #   url: https://github.com/moovida/flutter_map.git
     #   ref: version4smash
   
   # BSD
-  flutter_map_marker_cluster: ^1.1.1
+  flutter_map_marker_cluster: ^8.2.2
     # git:
     #   url: https://github.com/moovida/flutter_map_marker_cluster.git
     #   ref: version4smash
@@ -71,6 +71,10 @@ dependencies:
 
   # MIT
   transparent_image: ^2.0.0
+
+dependency_overrides:
+  intl: 0.20.2
+  ecache: 2.0.10
 
 dev_dependencies:
   test: ^1.20.1
