Align release versioning across backend/frontend and fix readonly combo rendering in notes
- added scripts/release_sync_version.sh to sync pyproject.toml version from git tag
- added run version-sync step in deploy workflow on tag builds
- made frontend build scripts read GSS_GIT_TAG from backend pyproject.toml
- fixed readonly combo/multicombo widgets in smashlibs to render as label/value text and avoid gray blocks in note detail view
- updated docker compose defaults (image, ports, restart, logs/env vars) and example config exports

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Sync backend version from tag
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          chmod +x scripts/release_sync_version.sh
+          ./scripts/release_sync_version.sh "${GITHUB_REF_NAME}"
+
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
