--- a/server_backend_django/pyproject.toml
+++ b/server_backend_django/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "GSS"
-version = "4.17_BB"
+version = "4.19+BB"
 description = "GeoPaparazzi Survey Server"
 authors = [
     {name = "Andrea Antonello", email = "andrea.antonello@gmail.com"},
