Changed the way the imagegrid is shown server-side: if IMAGEGRID_SHOW_ALL is false, only the chosen picture is shown. Added dependentcombo widget in smashlibs submodule.

--- a/docker/env.example
+++ b/docker/env.example
@@ -30,3 +30,6 @@ GSS_SECRETKEY="django-verysecure-89)jfnethf$ngh2a3r4c@^u*#9u&_jiby^^0g@)=u7dk17t
 #QGIS_SERVER_IGNORE_BAD_LAYERS=true
 #QGIS_SERVER_CACHE_DIRECTORY=/etc/qgisserver/qgis_server/cache/
 #QGIS_SERVER_CACHE_SIZE=100"
+
+# frontend imagegrid rendering in readonly notes (true=show all, false=show only selected)
+GSS_IMAGEGRID_SHOW_ALL=true
