Added images as static resources, and changed config so that they can be served from nginx and used directly in imagegrid forms.

--- a/docker/https/nginx.conf
+++ b/docker/https/nginx.conf
@@ -13,6 +13,18 @@ http {
 
         location = /favicon.ico { access_log off; log_not_found off; }
 
+        location /static/ {
+            alias /basefolder/static/;
+            expires 7d;
+            add_header Cache-Control "public, max-age=604800";
+        }
+
+        location /media/ {
+            alias /basefolder/media/;
+            expires 1d;
+            add_header Cache-Control "public, max-age=86400";
+        }
+
         location / {
             proxy_pass http://0.0.0.0:8000;
             proxy_set_header   X-Real-IP        $remote_addr;
@@ -35,6 +47,18 @@ http {
         ssl_certificate_key nginx-selfsigned.key;
 
         location = /favicon.ico { access_log off; log_not_found off; }
+
+        location /static/ {
+            alias /basefolder/static/;
+            expires 7d;
+            add_header Cache-Control "public, max-age=604800";
+        }
+
+        location /media/ {
+            alias /basefolder/media/;
+            expires 1d;
+            add_header Cache-Control "public, max-age=86400";
+        }
 
         location / {
             proxy_pass http://0.0.0.0:8000;
