--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && \
 
 WORKDIR /basefolder
 COPY server_backend_django/pyproject.toml server_backend_django/pdm.lock ./
-
+COPY server_backend_django/imagegrid_assets ./imagegrid_assets
 COPY server_backend_django/gss ./gss
 RUN rm -f ./gss/config.sh
 
