Tentative fix for the gray boxes shown by dependentimagegrid widgets. Updated images so they all have the same format. Updated scripts and nginx configuration to avoid CSS errors in the Django Admin interface. Tentative fix for the GSS login screen not allowing automatic form fill by password managers. Fix for text in controls overflowing.

--- a/docker/https/nginx.conf
+++ b/docker/https/nginx.conf
@@ -3,6 +3,8 @@ events {
 }
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
     error_log /basefolder/gss/nginx_error.log info;
     access_log /basefolder/gss/nginx_access.log combined;
